[gd_scene load_steps=24 format=2]

[ext_resource path="res://game/arena_elements/bricks/BrickMagnet.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/sfx/_pa/burst/burst.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/sfx/hit_stray_v2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/tilesets/tileset_arena_elements.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/sfx/_pa/skills/teleport_loop_v2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/_pa/skills/teleport_out_v2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/_pa/skills/teleport_in_v2.wav" type="AudioStream" id=7]
[ext_resource path="res://game/bolt/NodeShadow.tscn" type="PackedScene" id=8]

[sub_resource type="PhysicsMaterial" id=20]
absorbent = true

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 4 )

[sub_resource type="CircleShape2D" id=21]
radius = 48.0

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.171429, 0.737069, 0.982759, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.26403, 1, 1, 1, 0.168627 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=18]
max_value = 0.14
_data = [ Vector2( 0, 0.0975227 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.00770714, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 18 )

[sub_resource type="Curve" id=14]
min_value = -200.0
max_value = 0.0
_data = [ Vector2( 0.207921, -3.40909 ), 0.0, -10.5944, 0, 0, Vector2( 1, -200 ), -663.595, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 5
emission_ring_radius = 70.0
emission_ring_inner_radius = 70.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = SubResource( 19 )
radial_accel = -81.3
radial_accel_curve = SubResource( 15 )
scale = 1.6
color_ramp = SubResource( 13 )

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.313726 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ForceField/FF:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.37841 ),
"update": 0,
"values": [ Vector2( 15, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ForceField/FF:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=24]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.313726 ), Color( 0.952941, 0.356863, 0.498039, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ForceField/FF:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.180392 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ForceField/FF:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.37841, 0.406126 ),
"update": 0,
"values": [ Vector2( 15, 15 ), Vector2( 20.2, 20.2 ) ]
}

[sub_resource type="Animation" id=25]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.313726 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ForceField/FF:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.180392 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ForceField/FF:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4.43828, 0.233258 ),
"update": 0,
"values": [ Vector2( 20.2, 20.2 ), Vector2( 15, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.952941, 0.356863, 0.498039, 1 ), Color( 1, 1, 1, 0.313726 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=27]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=28]
audio_stream = ExtResource( 2 )
random_pitch = 1.05

[node name="MagnetBrick" type="StaticBody2D"]
physics_material_override = SubResource( 20 )
script = ExtResource( 1 )

[node name="BrickShadow" parent="." instance=ExtResource( 8 )]
casting_node_name = "Sprite"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 24, 8, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="ForceField" type="Area2D" parent="."]
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
linear_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceField"]
shape = SubResource( 21 )

[node name="FF" type="Sprite" parent="ForceField"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 15, 15 )

[node name="BlackholeParticles" type="Particles2D" parent="."]
scale = Vector2( 0.7, 0.7 )
emitting = false
amount = 100
speed_scale = 0.5
process_material = SubResource( 23 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 26 )
anims/intro = SubResource( 24 )
anims/outro = SubResource( 25 )

[node name="Sounds" type="Node" parent="."]

[node name="HitBullet" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 27 )
volume_db = -10.0
pitch_scale = 0.9
bus = "GameSfx"

[node name="HitMisile" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 28 )
volume_db = -10.0
bus = "GameSfx"

[node name="MagnetIn" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "GameSfx"

[node name="MagnetLoop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "GameSfx"

[node name="MagnetOut" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "GameSfx"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
